# matterkeep

./: .design-first.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.yaml  handoff-mm-archive.md  matterkeep.spec  pyproject.toml
.github/workflows/: release.yml
design/: api-spec.yaml  design-brief.md  software-design.md
src/matterkeep/: __main__.py  auth.py  cli.py  client.py  config.py  encrypt.py  exceptions.py  exporter.py  models.py  renderer.py  search.py
src/matterkeep/templates/: base.html  channel.html  index.html  media.html
src/matterkeep/templates/assets/: channel.js  search.js  style.css
tests/: conftest.py  test_auth.py  test_config.py  test_exporter.py  test_models.py  test_renderer.py
